# sscma-example-pi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh_CN.md  meson.build
cmake/: ncnn.cmake
examples/: sscma-yolov5.cpp  sscma-yolov8.cpp  yolov8.cpp
examples/bash/TCP_connect/: run client.sh  run_client.sh  run_service.sh
examples/bash/csi_input/: readme.md  run.sh
examples/bash/file_input/: run.sh
examples/bash/hardware_acceleration/: readme.md  v4l2enc.sh  v4l2src.sh  x264enc.sh
examples/bash/mqtt_output/: mqttsink.diff  readme.md  run.sh
examples/bash/net/: epoch_300_float.ncnn.param  epoch_300_float.ncnn1.param
examples/bash/rtsp_input/: readme.md  rtsp_output.sh  run.sh
examples/bash/web_img_output/: client.html  http_server.py  readme.md  run.sh
examples/bash/web_output/: client.html  readme.md  run.sh
examples/bash/webrtc_aws/: readme.md  run.sh
examples/bash/webrtc_sink/: readme.md  run.sh
examples/yolov8/: app.cmake  main.cpp
src/: gstsscmayolov5.cc  gstsscmayolov5.h  options.hpp  tensor_info.cc  tensor_info.h
